--- a/events.html
+++ b/events.html
@@ -35,7 +35,7 @@
         <a href="#"><!-- <img id="menu-icon" class="image" src="http://store4.up-00.com/2017-07/150110314715551.png" alt="icon"> --><i id="menu-icon" class="image" class="fas fa-align-justify" alt="icon"></i></a>
         
         <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" style="font-family: sans-serif;">Home</a></li>
         <!-- <li><a href="#">About</a></li> -->
         <!-- <li><a href="#">Portfolio</a></li>  
         <li><a href="#">Content</a></li>  -->
